using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;
   internal class AnimationStrings
    {
            internal static string isRuning = "isRuning";
            internal static string isGrounded = "isGrounded";
    internal static string yVelocity = "yVelocity";

    public static string jumpTrigger = "jump";
    internal static string isOnWall = "isOnWall";
    internal static string isOnCelling = "isOnCelling";
    internal static string attackTrigger = "attack";
    internal static string canMove = "canMove";
    internal static string hasTarget = "hasTarget";
    internal static string isAlive = "isAlive";
    internal static string Ishit = "isHit";
    internal static string hitTrigger = "hit";
    internal static string lockVelocity = "lockVelocity";
}

